--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <section id="projects">
             <h2>Course Projects</h2>
             <ul>
-                <li>Project 1: **Mobile App for Inventory Management** - I developed an app that helps store owners manage inventory, track sales, and keep their data organized efficiently.</li>
-                <li>Project 2: **Tech Blog Platform** - A fully responsive blogging platform that allows users to create, manage, and share technical articles and tutorials.</li>
-                <li>Project 3: **Website Optimization Tool** - A tool I built to analyze and improve the performance of websites by detecting common issues and providing optimization suggestions.</li>
+                <li>Project 1: Mobile App for Inventory Management - I developed an app that helps store owners manage inventory, track sales, and keep their data organized efficiently.</li>
+                <li>Project 2: Tech Blog Platform - A fully responsive blogging platform that allows users to create, manage, and share technical articles and tutorials.</li>
+                <li>Project 3: Website Optimization Tool - A tool I built to analyze and improve the performance of websites by detecting common issues and providing optimization suggestions.</li>
             </ul>
         </section>
     </main>
