--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
     </header>
 
     <main>
+        <!-- About Me Section with Background Image -->
         <section id="about-me">
             <h2>About Me</h2>
             <p>Hi, I'm Brandon Wood, a passionate technology enthusiast with a growing interest in software development and IT solutions. I have always been fascinated by how technology can be used to solve real-world problems. Currently, I am pursuing a career in the tech industry, honing my skills in programming and system management.</p>
         </section>
 
+        <!-- Career Goals Section -->
         <section id="career-goals">
             <h2>Career Goals</h2>
             <p>My goal is to become a professional tech expert, specializing in software development and system architecture. I aim to work with cutting-edge technologies and be part of teams that build innovative solutions for global challenges. I want to contribute to projects that make a positive impact on businesses and everyday life through technology.</p>
         </section>
 
+        <!-- Projects Section -->
         <section id="projects">
             <h2>Course Projects</h2>
             <ul>
