--- a/index.html
+++ b/index.html
@@ -3,44 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brandon Wood's Portfolio</title>
+    <title>Brandon Wood - Portfolio Biography</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Brandon Wood's Portfolio</h1>
+        <h1>Brandon Wood</h1>
         <nav>
             <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#career-goals">Career Goals</a></li>
+                <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <!-- About Me Section with Background Image -->
-        <section id="about-me">
-            <h2>About Me</h2>
-            <p>Hi, I'm Brandon Wood, a passionate technology enthusiast with a growing interest in software development and IT solutions. I have always been fascinated by how technology can be used to solve real-world problems. Currently, I am pursuing a career in the tech industry, honing my skills in programming and system management.</p>
-        </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <img src="file:///C:/Users/DELL/Desktop/Rems/Brandon/brandon.jpg" alt="Brandon Wood" class="profile-image">
+        <p>Hi, I'm Brandon Wood. I am currently working as a Senior Technical and Project Lead at ExpertFlow. My future career goal is to become a professional tech. I am working on an app for managing inventory and sales for a store that sells various models of mobiles, chargers, and earphones.</p>
+    </section>
 
-        <!-- Career Goals Section -->
-        <section id="career-goals">
-            <h2>Career Goals</h2>
-            <p>My goal is to become a professional tech expert, specializing in software development and system architecture. I aim to work with cutting-edge technologies and be part of teams that build innovative solutions for global challenges. I want to contribute to projects that make a positive impact on businesses and everyday life through technology.</p>
-        </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Inventory and Sales Management App</li>
+            <li>Health Research Using the Payback Framework</li>
+            <li>Learning HTML, CSS, and Web Design</li>
+        </ul>
+    </section>
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2>Course Projects</h2>
-            <ul>
-                <li>Project 1: Mobile App for Inventory Management - I developed an app that helps store owners manage inventory, track sales, and keep their data organized efficiently.</li>
-                <li>Project 2: Tech Blog Platform - A fully responsive blogging platform that allows users to create, manage, and share technical articles and tutorials.</li>
-                <li>Project 3: Website Optimization Tool - A tool I built to analyze and improve the performance of websites by detecting common issues and providing optimization suggestions.</li>
-            </ul>
-        </section>
-    </main>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>You can reach me at my email: <a href="mailto:brandon@example.com">brandon@example.com</a></p>
+    </section>
 
     <footer>
         <p>&copy; 2026 Brandon Wood</p>
