--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Brandon Wood</h1>
+        <h1>Welcome to Brandon Wood's Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -22,7 +22,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="file:///C:/Users/DELL/Desktop/Rems/Brandon/brandon.jpg" alt="Brandon Wood" class="profile-image">
+        <!-- Use the uploaded image -->
+        <img src="/mnt/data/5b7f65b2-70cb-414b-a70e-bd5420e3771a.png" alt="Brandon Wood" class="profile-image">
         <p>Hi, I'm Brandon Wood, a Senior Technical and Project Lead at ExpertFlow, with a strong passion for technology and software development. My current work involves managing technical projects, leading teams, and overseeing product development for cutting-edge software solutions. My long-term goal is to evolve into a professional in the tech industry, focusing on software development and systems integration.</p>
         <p>I am currently working on creating an app that helps store owners manage inventory and sales, focusing on mobile phones, chargers, and earphones. The app is designed to improve store operations, enhance customer experience, and streamline inventory management.</p>
     </section>
