--- a/index.html
+++ b/index.html
@@ -33,4 +33,30 @@
         <p>As a Senior Technical and Project Lead, I lead diverse teams of developers, designers, and business analysts to deliver high-quality software solutions. My key responsibilities include project planning, client communication, troubleshooting, and ensuring that projects are completed on time and within budget. My work mainly involves cloud-based solutions and CRM software integration for large-scale enterprises.</p>
 
         <h3>Technical Lead – TechCorp (2023-2025)</h3>
-        <p>At TechCorp, I contributed to the development of an enterprise-level system that streamlined business operations across mult
+        <p>At TechCorp, I contributed to the development of an enterprise-level system that streamlined business operations across multiple departments. I worked closely with clients to understand their needs and develop customized solutions that fit their business model. I also mentored junior developers and provided guidance on best practices for software development and agile methodologies.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>Inventory and Sales Management App</strong>: A mobile application designed to help store owners manage sales, inventory, and customer interactions in real-time. This project uses cloud technology to store data and enhance user experience.</li>
+            <li><strong>Health Research Framework</strong>: A health research initiative focused on understanding the impact of various health programs using the payback framework. The project involves analyzing data and drawing conclusions to improve program effectiveness.</li>
+            <li><strong>Website Portfolio</strong>: My personal portfolio created using HTML5 and CSS3 to showcase my skills, projects, and career journey. The website adapts to various screen sizes for an optimal user experience.</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>If you'd like to connect with me or discuss potential collaborations, feel free to reach out through the contact details below:</p>
+        <ul>
+            <li>Email: <a href="mailto:brandonwood@gmail.com">brandonwood@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/brandonwood">linkedin.com/in/brandonwood</a></li>
+            <li>Phone: +1 (555) 123-4567</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 Brandon Wood</p>
+    </footer>
+</body>
+</html>
